--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
   assets:
     - assets/search_icon.png
     - assets/bookmark.png
+    - assets/file_state.png
+    - assets/time.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
