--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  flutter_polygon: ^0.3.0+2
+ 
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,10 @@ flutter:
     - assets/file_state.png
     - assets/time.png
     - assets/done_icon.png
+    - assets/send_icon.png
+    - assets/home_icon.png
+
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
