--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_polygon: ^0.3.0+2
+  device_preview: ^1.1.0
  
 
 dev_dependencies:
